Revert "fix: 모바일 ob-wrap position:fixed 전체화면 고정"
This reverts commit 54c26da20e61525bfc864ddb2b478da3de90e249.

--- a/style.css
+++ b/style.css
@@ -2891,16 +2891,8 @@ input:focus, textarea:focus {
     min-height: unset;
   }
   #ob-wrap {
-    height: 100dvh;
-    max-height: 100dvh;
+    height: calc(100dvh - 64px);
     overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding-top: 64px;
-    box-sizing: border-box;
   }
   .ob-inner {
     overscroll-behavior: contain;
